[SYSTEMDS-3880] Java 17 MultiTenant Test